esoutput2.txt
:compileJava/home/seungkim11/beautiful-data-project-victorious-secret/src/main/java/edu/csula/datascience/r/ElasticSearchMigrator.java:11: error: constructor MongoToElasticSearch in class MongoToElasticSearch cannot be applied to given types;
        MongoToElasticSearch mes = new MongoToElasticSearch();
                                   ^
  required: String
  found: no arguments
  reason: actual and formal argument lists differ in length
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 14.074 secs
